    * FIX: changed check_type to be always active (0)
    * FIX: fix bug in assignment of livecheck helpers 
    * FIX: close inherited unused filedescriptors after fork()
    * FIX: kill process group of called plugin if timeout is reached
           -> preventing possible freeze of livecheck
    * FIX: correct escaping of character / in nagios checkresult file

    Checks & Agents:
    * FIX: Linux mk_logwatch: iregex Parameter was never used
    * FIX: Windows agent: quote '%' in plugin output correctly
    * FIX: multipath check now handles '-' in "user friendly names"
    * New check mssql_counters.locks: Monitors locking related information of
      MSSQL tablespaces
    * FIX: mssql_counters checks now really only inventorize percentage based
      counters if a base value is set
    * windows_updates agent plugin: Fetching data in background mode, caching
      update information for 30 minutes
    * FIX: netapp_vfiler: fix inventory function (thanks to Falk Krentzlin)
    * FIX: ps: avoid exception, when CPU% is missing (Zombies on Solaris)
    * FIX: win_dhcp_pools: fixed calculation of perc_free

1.2.1i1:
    Core:
    * Allow to add options to rules. Currently the options "disabled" and
      "comment" are allowed. Options are kept in an optional dict at the
      end of each rule.
    * parent scan: skip gateways that are reachable via PING
    * Allow subcheck to be in a separate file (e.g. foo.bar)
    * Contacts can now define *_notification_commands attributes which can now
      override the default notification command check-mk-notify
    * SNMP scan: fixed case where = was contained in SNMP info
    * check_imap_folder: new active check for searching for certain subjects
      in an IMAP folder
    * cmk -D shows multiple agent types e.g. when using SNMP and TCP on one host

    Checks & Agents:
    * New Checks for Siemens Blades (BX600)
    * New Checks for Fortigate Firewalls
    * Netapp Checks for CPU Util an FC Port throughput