@@ -131,6 +131,7 @@
     * FIX: kill process group of called plugin if timeout is reached
            -> preventing possible freeze of livecheck
     * FIX: correct escaping of character / in nagios checkresult file
+    * FIX: fixed SIGSEGV on hosts without defined check_command
 
     Checks & Agents:
     * FIX: Linux mk_logwatch: iregex Parameter was never used
